# Qs-FO2-MAP.txt-Level-Extractor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Dependencies.cmake
dependencies/glad1/: CMakeLists.txt
dependencies/glad1/include/glad/: glad.h
dependencies/glad1/src/: glad.c
dependencies/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw-3.4/docs/: Makefile  cmake_install.cmake
dependencies/glfw-3.4/src/: Makefile  cmake_install.cmake
src/: X11_drag_drop.cpp  main.cpp  main.sdl2.cpp  map_txt_gui.cpp  map_txt_gui.h  map_txt_parser.cpp  map_txt_parser.h
